       Hugh Esco for the report (#370)!
     - Changed the exit value for `rebase` and `revert` from 1 to 0 when there
       is no work to do. This is to match a shell's expectation of non-zero
       exit statuses only when a command is unsuccessful, as well as the
       behavior of `deploy` as of v0.995. Nothing to do is considered
       successful (#363).

0.9996 2017-07-17T18:33:12Z
     - Fixed an error where Oracle sometimes truncated timestamp formats so
       that date parsing failed. Thanks to Johann Wilfling for the report and
       @nmaqsudov for the solution (#316).
     - Added pager configuration, prioritizing the new `core.pager`
       configuration variable over the `$PAGER` environment variable. The new
       `$SQITCH_PAGER` environment variable trumps all. Thanks to Yati Sagade
       for the pull request (#329).
     - Documented the `core.editor` configuration variable.
     - Updated PostgreSQL registry detection to avoid errors when not running
       Sqitch as a superuser and the registry schema already exists. Done by
       looking for the `changes` table in the `pg_tables` view instead of
       looking for the registry schema in the `pg_namespace` catalog table,
       and by using `CREATE SCHEMA IF NOT EXISTS` on PostgreSQL 9.3 and
       higher. Thanks to @djk447 for the pull request (#307).
     - Updated PostgreSQL registry detection to avoid errors when the `psql`
       client is newer than the server version. Sqitch now fetches the version
       from the server instead of parsing it from the client.
     - Removed `no Moo::sification`, to allow modules to be used by Moose
       applications. Replaced with tests to make sure Sqitch itself never uses
       Moose. Thanks to @perigrin for the PR (#332).
     - Specifying a change before a target name on the command-line no longer
       ignores the target (#281).
     - The `--db-*` options are now more consistently applied to a target,